# dasilva-invariants

./: .gitignore  .readthedocs.yaml  Advection L*.ipynb  CMakeLists.txt  First Paper Plots.ipynb  GOES LFM Plots.ipynb  Invariant Storm Plots.ipynb  K Meridional Plot.ipynb  LICENSE.rst  LStar vs Number of Local Times Experiment.ipynb  README.md  Test Current.ipynb  Test Dipole Model on LFM Grid.ipynb  Test Dipole Model.ipynb  Test Interpolation Radius.ipynb  Test K Integration.ipynb  Test L* Convergence.ipynb  Test LFM Data.ipynb  Test Streamlines.ipynb  Test T96 Model.ipynb  Zhao Gridded Product.ipynb  environment.yml  pyproject.toml  setup.py  setup.sh
.github/workflows/: dasilva-invariants-ci.yml
Attic/: download_goes13.sh
dasilva_invariants/: constants.py  diagnostics.py  insitu.py  invariants.py  meshes.py  models.py  psd.py  utils.py
dasilva_invariants/_fortran/: geopack2008.f  geopack2008_interface.f  t96.f  t96_interface.f  ts05.f  ts05_interface.f
dasilva_invariants/tests/: test_examples.py  test_fortran.py  test_tsyganenko_cdaweb.py
docs/: citing.rst  conf.py  configure_pygeopack.rst  dasilva_invariants.rst  examples.rst  index.rst  insitu.rst  intro.rst  invariants.rst  meshes.rst  methodology.rst  models.rst  psd.rst  requirements.txt
docs/_templates/: github.html  logo.html  mynav.html  navigation.html  redirect.html  styles.css
